--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "next": "^10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.6.3",
+    "universal-rxjs-ajax": "^2.0.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
@@ -19,9 +25,12 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux-logger": "^3.0.8",
     "autoprefixer": "^10.2.4",
     "jest": "^26.6.3",
     "postcss": "^8.2.6",
+    "redux-devtools": "^3.7.0",
     "tailwindcss": "^2.0.3",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
